[package]
name = "filetype-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["all"]
all = ["lazystatic", "application", "archive", "av", "font", "image"]
application = []
av = ["audio", "video"]
archive = []
video = []
audio = []
font = []
image = []
staticinit = ["static_init"]
lazystatic = ["lazy_static"]


[dependencies]
static_init = { version = "1", optional = true }
lazy_static = { version = "1.4", optional = true }
